# myUtils

./: README.md  setup.cfg  setup.py
myUtils/: mkch.py
myUtils.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
