[metadata]
name = myUtils
version = 0.1
author = Seyed Abbas Jazaeri
author_email = abja@dhigroup.com
description = My simple Python utilities
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/abja-dhi/myUtils
classifiers = 
    Programming Language :: Python :: 3
    License :: MIT License
    Operating System :: OS  Independent

[options]
packages = find:
python_requires = >=3.7
include_package_data = True
